# ncurses_idea

./: 0001-docs-stl-add-formal-grammar-reference-and-fill-user-.patch  0001-fix-core-test-base-restore-failed-check-handler-in-t.patch  0002-tools-add-editor-support-for-STL-syntax-highlighting.patch  0003-tools-add-GitHub-Linguist-submission-materials.patch  0008-chore-term-misc-cleanups-and-portability-fixes.patch  0009-fix-term-k9s-style-ESC-behavior-with-double-press-co.patch  CMakeLists.txt  InputBox.cpp  InputBox.h  OutputPad.cpp  OutputPad.h  README.md  StatusBar.cpp  StatusBar.h  main.cpp
sessions/2026-04-23-stl-highlight/: 0004-docs-stl-refactor-user-guide-for-clarity-and-complet.patch  README.md
sessions/2026-04-24-cli-cleanup/: 0001-feat-cli-audit-renames-and-shell-completion-infrastr.patch  README.md
sessions/2026-04-24-sql-editor-services/: 0001-feat-core-lang-tolerant-scanner-recoverable-parser-s.patch  0002-feat-core-lang-add-query-tokenize-and-query-validate.patch  0003-feat-core-lang-add-query-complete-with-positional-FS.patch  0004-feat-core-lang-add-query-guideAt-for-cursor-position.patch  0005-feat-core-lang-evaluate-WHERE-on-empty-optionals-as-.patch  0007-fix-term-SQL-error-UX-and-duplicate-query-name-rejec.patch  0010-feat-term-add-hidden-easter-egg-responses-for-common.patch  README.md
sessions/2026-04-26-installer-and-docs/: README.md  installer-and-docs.patch
